--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Confirm Dialog for react with Bootstrap Modal",
   "main": "lib/Confirm.js",
   "scripts": {
-    "test": "npm test"
+    "build": "babel src --out-dir lib",
+    "clean": "rimraf lib",
+    "lint": "eslint src",
+    "prepublish": "npm run clean && npm run build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +26,21 @@
   "bugs": {
     "url": "https://github.com/gregthebusker/react-confirm-bootstrap/issues"
   },
-  "homepage": "https://github.com/gregthebusker/react-confirm-bootstrap#readme"
+  "homepage": "https://github.com/gregthebusker/react-confirm-bootstrap#readme",
+  "devDependencies": {
+    "babel": "^6.3.13",
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.17",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "eslint": "^1.7.1",
+    "eslint-plugin-react": "^3.11.3",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.0",
+    "react-bootstrap": "^0.28.3",
+    "react-dom": "^0.14.0",
+    "rimraf": "^2.3.4"
+  }
 }
