--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib",
     "lint": "eslint src",
-    "prepublish": "npm run clean && npm run build",
-    "test": "jest"
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -31,16 +30,13 @@
     "babel": "^6.3.13",
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
-    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "eslint": "^1.7.1",
     "eslint-plugin-react": "^3.11.3",
     "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.0",
     "react-bootstrap": "^0.28.3",
-    "react-dom": "^0.14.0",
     "rimraf": "^2.3.4"
   }
 }
