--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
   "homepage": "https://github.com/gregthebusker/react-confirm-bootstrap#readme",
   "devDependencies": {
     "babel": "^6.3.13",
-    "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "eslint": "^2.3.0",
     "eslint-plugin-react": "^4.2.1",
-    "react": "^0.14.7",
-    "react-bootstrap": "^0.28.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "rimraf": "^2.3.4"
+  },
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3"
   }
 }
