--- a/package.json
+++ b/package.json
@@ -1,49 +1,56 @@
 {
-  "name": "react-confirm-bootstrap",
-  "version": "4.0.0",
-  "description": "Confirm Dialog for react with Bootstrap Modal",
-  "main": "lib/Confirm.js",
-  "scripts": {
-    "build": "gulp build",
-    "clean": "rimraf lib",
-    "lint": "eslint src",
-    "prepublish": "npm run clean && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gregthebusker/react-confirm-bootstrap.git"
-  },
-  "keywords": [
-    "react",
-    "bootstrap",
-    "confirm",
-    "modal",
-    "dialog"
-  ],
-  "author": "Greg Schechter",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gregthebusker/react-confirm-bootstrap/issues"
-  },
-  "homepage": "https://github.com/gregthebusker/react-confirm-bootstrap#readme",
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^3.0.1",
-    "eslint-plugin-react": "^5.1.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "rimraf": "^2.6.2"
-  },
-  "peerDependencies": {
-    "react": ">=15.0.0"
-  },
-  "dependencies": {
-    "prop-types": "^15.6.0",
-    "react-bootstrap": "^0.31.5"
-  }
+    "name": "react-confirm-bootstrap",
+    "version": "4.0.0",
+    "description": "Confirm Dialog for react with Bootstrap Modal",
+    "main": "lib/Confirm.js",
+    "scripts": {
+        "package": "gulp build",
+        "clean": "rimraf lib",
+        "lint": "eslint src",
+        "prepublish": "npm run clean && npm run package",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/gregthebusker/react-confirm-bootstrap.git"
+    },
+    "keywords": [
+        "react",
+        "bootstrap",
+        "confirm",
+        "modal",
+        "dialog"
+    ],
+    "author": "Greg Schechter",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/gregthebusker/react-confirm-bootstrap/issues"
+    },
+    "homepage": "https://github.com/gregthebusker/react-confirm-bootstrap#readme",
+    "devDependencies": {
+        "babel": "^6.23.0",
+        "babel-core": "^6.26.0",
+        "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "eslint": "^3.0.1",
+        "eslint-plugin-react": "^5.1.1",
+        "gulp": "^3.9.1",
+        "gulp-babel": "^6.1.2",
+        "react": "^16.1.0",
+        "react-dom": "^16.1.0",
+        "react-scripts": "^1.0.17",
+        "rimraf": "^2.6.2"
+    },
+    "peerDependencies": {
+        "react": ">=15.0.0"
+    },
+    "dependencies": {
+        "prop-types": "^15.6.0",
+        "react-bootstrap": "^0.31.5"
+    }
 }
