--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,8 @@
         "react": "React",
         "prop-types": "PropTypes",
         "react-bootstrap": "ReactBootstrap",
+        "react-bootstrap/lib/Button": "Button",
+        "react-bootstrap/lib/Modal": "Modal",
       }
     }]
   ],
